--- a/challenge-one-portafolio-latam-repositorio-base/index.html
+++ b/challenge-one-portafolio-latam-repositorio-base/index.html
@@ -258,11 +258,11 @@
                     <h3 class="formcontato__subtext">¿Quieres contactarme?</h3>
                     <h3 class="formcontato__subtext">Complete el siguiente formulario y me pondré en contacto con usted lo antes posible. </h3>
                     <form class="formcontato__form" name="form">
-                        <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre">
-                        <input class="formcontato__input" type="email" name="email" placeholder="E-mail">
-                        <input class="formcontato__input" type="text" name="asunto" placeholder="Assunto">
-                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje"></textarea>
-                        <button type="submit" class="formcontato__botao">Enviar mensaje</button>
+                        <input class="formcontato__input" type="text" name="nombre" placeholder="Nombre" required maxlength="50">
+                        <input class="formcontato__input" type="email" name="email" placeholder="Ejemplo: texto@texto.com"required>
+                        <input class="formcontato__input" type="text" name="asunto" placeholder="Asunto" required maxlength="50">
+                        <textarea class="formcontato__textarea" rows="5" cols="40" id="mensagem" name="mensaje" placeholder="Mensaje" required maxlength=""></textarea>
+                        <button type="submit" class="formcontato__botao">Enviar Mensaje</button>
                     </form>
                 </div>
             </div>
@@ -271,8 +271,8 @@
         <!-- Sección de Footer -->
         <section class="footer">
             <div class="footer__rodape">
-                <p>Desarrollado por Fulana de Tal</p>
-                <p>2022</p>
+                <p>Desarrollado por Fabian Cuauro</p>
+                <p>2024</p>
             </div>
         </section>
     </div>
